--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <button>SIM, EU TAMBEM QUERO TRANSFORMAR O MEU INSTAGRAM EM UMA MAQUINA DE FAZER DINHEIRO!</button>
         </div>
         <div class="img_compra_segura">
-            <img src="compra-Segura-removebg-preview.png">
+            <img src="assets/compra-Segura-removebg-preview.png">
         </div>
     </div>
 
     <div class="info1">
         <div class="info_left">
-            <img src="man_cell_money.jpg" alt="">
+            <img src="assets/man_cell_money.jpg" alt="">
         </div>
 
         <div class="info_right">
